# open-verse-api

./: .gitignore  README.md  example.env  pyproject.toml  pytest.ini  readme.md  requirements.txt
src/: push_to_zephyr.py
src/tests/: audio_test.py  conftest.py  v1_get_token_test.py
src/utils/api_endpoints/: audio_endpoint.py  base_requests.py  register_endpoint.py
src/utils/helpers/: random_generator.py
src/utils/requests/: audio_endpoint.py  base_requests.py  open_verse_requests.py  register_endpoint.py  request_blueprint.py  requests.py
src/utils/requests/new_user/: create_user.py  user_details.py
src/utils/zephyr/: automations_endpoint.py  base_requests.py  testcases_endpoint.py
tests/: audio_test.py  conftest.py  v1_get_token_test.py
