[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Peter Chay <peterchay88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.5"
pytest-html = "^4.1.1"
requests = "^2.32.3"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
